2013-04-11 Klaas Padeken < padeken -at- physik.rwth-aachen.de>
untagged
===
	-fix isDecaying 

2013-04-10 Markus Radziej < radziej -at- physik.rwth-aachen.de>
v100 & v101
===
   - update to CMSSW_5_3_9_patch1
   - implemented workaround for dimuon vertex reconstruction failure
   - added photon fix from Matthias Endres

2012-12-07 Tobias Pook < pook -at- physik.rwth-aachen.de>
	-Added new variables: muo_DiMuonVertexValid,muo_DiMuonVertexNdf,muo_DiMuonVertexChi2,muo_DiMuonVertexMass to SusyACSkimAnalysis.cpp
	-Metfilter updated with latest recommendations
	-Metfilter definition moved from cmssw.py to seperate file ~/ACSusyAnalysis/python/METfilter_cff.py

2012-11-16 Sören Erdweg < erdweg -at- physik.rwth-aachen.de>
v97
===
   - update to CMSSW_5_3_6_patch1
   - update TreeContent.h
   - new Cocktail muon
   - tau vertex
   - changed b-tag
   - truth: decay of W', Z', H and Graviton is now stored

2012-10-31 Sebastian Thüer < thuer -at< physik.rwth-aachen.de>
v96
===
   - Fixed empty output when not using global skims
   - Updated SkimmingCuts to use the default Aachen clustername(has to be changed for users where the hypernews name differs from the aachen name)
   - Output is compatible with v95 output

2012-10-23 Martin Weber <weberm -at- physik.rwth-aachen.de>, Markus Radziej <radziej -at- physik.rwth-aachen.de>
	Added common skim
	Fixed CVS merge bug
        Fixed path problem in skim.sh
        Removed too verbose error reporting in large ECAL laser correction filter
	Fixed missing variable declaration

2012-09-14 Martin Weber <weberm -at- physik.rwth-aachen.de>
v92
===

* Bug fixes:
	In rare cases, when the pT of the triggerobject is zero, the code
	failed with a Fatal Root error. Now, the trigger objects are
	filled in that case with zeroes (pt=0, eta=0, phi=0).

	The version number has been fixed in SkimmingCuts.cfg

v91
===

	This version is about 40% faster and consumes about 1/3 disk space
	compared to the previous version.

* Bug fixes: